@startuml
skinparam classAttributeIconSize 0


Package Presentation{
class SpecifyCategoryUI {
+doShow();
}
}

Package Application{
class SpecifyCategoryController {
  +registerAlphaNumericCode(String code)
  +registerDescription(String descricao)
  +specifyCategory(final String code, final String description)
}
}


Package Domain{
class Category {
}

}

Package Persistence{
class RepositoryFactory{
  +category()
}

class CategoryRepository{
  +save(category)
}

}



SpecifyCategoryUI ..> SpecifyCategoryController
SpecifyCategoryController ..> Category
SpecifyCategoryController ..> RepositoryFactory
SpecifyCategoryController ..> CategoryRepository
RepositoryFactory ..|> CategoryRepository
CategoryRepository ..|> Category




@enduml